fix(BlockCollapse): change .collapse-small margin-top to mobile variable

--- a/Components/BlockCollapse/_style.scss
+++ b/Components/BlockCollapse/_style.scss
@@ -7,7 +7,7 @@
 
     // precontent spacing
     &-small {
-      margin-top: calc(-1 * (var(--component-spacing-tablet) / 3));
+      margin-top: calc(-1 * (var(--component-spacing-mobile) / 3));
 
       @media (min-width: $breakpoint-tablet) {
         margin-top: calc(-1 * (var(--component-spacing-tablet) / 2));
